# TypingSpeedTest

./: CMakeLists.txt
hdr/: logic.h  mainWindow.h  virtualkeyboard.h
src/: logic.cpp  main.cpp  mainWindow.cpp  virtualkeyboard.cpp
texts/: text1.txt  text2.txt  text3.txt  text4.txt  text5.txt
ui/: window.ui
